Second level optimisation for edge cases