@@ -1,6 +1,7 @@
 package com.example.sudoku.commands;
 
 import java.util.Map;
+import java.util.Scanner;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
@@ -20,34 +21,35 @@ public class CommandFactory {
     private static final Map<String, Function<String, Command>> ARG_COMMANDS = Map.of(
             "clear", ClearCommand::new);
 
-    public static Command parse(String line, Board board, int[][] solution, java.util.Scanner sc) {
-        if (line == null || line.trim().isEmpty()) {
+    public static Command parse(String line, Board board, int[][] solution, Scanner sc) {
+
+        if (line == null || line.isBlank()) {
             return new UnknownCommand();
         }
 
         String[] parts = line.trim().split("\\s+");
-        if (parts.length == 0) {
-            return new UnknownCommand();
-        }
-
         String cmd = parts[0].toLowerCase();
 
+        // Commands without arguments
         Supplier<Command> noArg = COMMANDS.get(cmd);
         if (noArg != null) {
-            return noArg.get();
+            return parts.length == 1
+                    ? noArg.get()
+                    : new UnknownCommand();
         }
 
-        Function<String, Command> oneArg = ARG_COMMANDS.get(cmd);
-        if (oneArg != null) {
-            if (parts.length >= 2 && parts[1] != null && !parts[1].isBlank()) {
-                return oneArg.apply(parts[1]);
+        // Commands like: A5 clear
+        if (parts.length == 2 && "clear".equalsIgnoreCase(parts[1])) {
+            Function<String, Command> oneArg = ARG_COMMANDS.get(parts[1].toLowerCase());
+
+            if (oneArg != null) {
+                return oneArg.apply(parts[0]);
             }
-            return new UnknownCommand();
         }
 
-        // Default: place command expects: <cell> <number>
-        if (parts.length >= 2 && parts[1] != null && parts[1].matches("\\d+")) {
-            return new SetCellCommand(parts[0], parts[1]);
+        // Commands like: A5 7
+        if (parts.length == 2 && parts[1].matches("\\d+")) {
+            return new PlaceCommand(parts[0], parts[1]);
         }
 
         return new UnknownCommand();
